@@ -1,0 +1,70 @@
+#!/bin/sh
+
+# Test of GtkBuilder support.
+# Checks that the extracted pot contains the right translatable
+# content, comments and context.
+
+tmpfiles=""
+trap 'rm -fr $tmpfiles' 1 2 3 15
+
+: ${XGETTEXT=xgettext}
+${XGETTEXT} -o - xgettext-gtkbuilder-empty.ui 2>/dev/null 1>&2
+test $? = 0 || {
+  echo "Skipping test: xgettext was built without GtkBuilder support"
+  rm -fr $tmpfiles; exit 77
+}
+
+tmpfiles="$tmpfiles xg-gtk-1.ui"
+cat <<EOF > xg-gtk-1.ui
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <!-- interface-requires gtk+ 3.0 -->
+  <object class="GtkWindow" id="window">
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes" context="This is the context for this text" comments="This is a comment for empty window">This is an empty window</property>
+    <child>
+      <placeholder/>
+    </child>
+  </object>
+</interface>
+EOF
+
+tmpfiles="$tmpfiles xg-gtk-1.pot"
+: ${XGETTEXT=xgettext}
+${XGETTEXT} -o - xg-gtk-1.ui | grep -v 'POT-Creation-Date' > xg-gtk-1.pot
+test $? = 0 || { rm -fr $tmpfiles; exit 1; }
+
+tmpfiles="$tmpfiles xg-gtk-1.ok"
+cat <<EOF > xg-gtk-1.ok
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Transfer-Encoding: 8bit\n"
+
+#. This is a comment for empty window
+#: xg-gtk-1.ui:6
+msgctxt "This is the context for this text"
+msgid "This is an empty window"
+msgstr ""
+EOF
+
+: ${DIFF=diff}
+${DIFF} xg-gtk-1.ok xg-gtk-1.pot
+result=$?
+
+rm -fr $tmpfiles
+
+exit $result
